--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -1,7 +1,8 @@
 ---
 title:  "My First Blog Post"
 date:   2019-07-11 23:55:59 +0530
-
 ---
 
+{% highlight ruby %}
 print 'Hello, World!'
+{% endhighlight %}
