--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -9,3 +9,9 @@ published: true
 {% highlight ruby %}
 print 'Hello, World!'
 {% endhighlight %}
+
+```
+print 'Hello, World!'
+```
+
+`print 'Hello, World!'`
