--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -6,12 +6,16 @@ permalink: blog/:title/
 published: true
 ---
 
+## 3 ways of formatting code block in a Jekyll post :
+
 {% highlight ruby %}
 print 'Hello, World!'
 {% endhighlight %}
 
+
 ```
 print 'Hello, World!'
 ```
+
 
 `print 'Hello, World!'`
