--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -1,7 +1,7 @@
 ---
 title: "My First Blog Post"
 date: 2019-07-11 23:55:59 +0530
-tags: Blog Python
+tags: Python
 permalink: blog/:title/
 published: true
 ---
