testing share variable

--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -4,6 +4,7 @@ date: 2019-07-11 23:55:59 +0530
 tags: Python
 permalink: "/blog/:title.html"
 published: true
+share: false
 ---
 
 ## 3 ways of formatting code block in a Jekyll post :
