--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -7,7 +7,7 @@ published: true
 share: false
 ---
 
-## 3 ways of formatting code block in a Jekyll post :
+## 3 ways of formatting a code block:
 
 {% highlight python %}
 print 'Hello, World!'
