Added header variable

--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -3,8 +3,9 @@ title: "My First Blog Post"
 date: 2019-07-11 23:55:59 +0530
 tags: Python
 permalink: "/blog/:title.html"
+header:
+  teaser: "/assets/images/blog-posts-images/01-hello-world.png"
 published: true
-share: false
 ---
 
 ## 3 ways of formatting a code block:
