--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -5,6 +5,7 @@ tags: Python
 permalink: "/blog/:title.html"
 header:
   teaser: "/assets/images/blog-posts-images/01-hello-world.png"
+comments: true
 published: true
 ---
 
