Updated external accounts blog

--- a/_posts/2017/2017-06-June/2017-06-06-03-packaging.md
+++ b/_posts/2017/2017-06-June/2017-06-06-03-packaging.md
@@ -6,6 +6,8 @@ tags:
   - TERMINAL
   - MAC ADMINISTRATION
   - PACKAGING
+  - TRAINING
+  - ATSP
 permalink: "/blog/:title.html"
 comments: true
 published: true
