--- a/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
+++ b/_posts/2019/2019-07-July/2019-07-11-01-hello-world.md
@@ -1,5 +1,5 @@
 ---
-title: "My First Blog Post"
+title: "My First Jekyll Post"
 date: 2019-07-11 23:55:59 +0530
 tags: Python
 permalink: "/blog/:title.html"
